@@ -7,6 +7,7 @@ INCOMPATIBLE CHANGES
   TEZ-2679. Admin forms of launch env settings
 
 ALL CHANGES:
+  TEZ-2933. Tez UI: Load application details from RM when available
   TEZ-2908. Tez UI: Errors are logged, but not displayed in the UI when AM fetch fails
   TEZ-2923. Tez Live UI counters view empty for vertices, tasks, attempts
   TEZ-2924. Framework for Hadoop shims.
